# yt-vd

./: .gitignore  LICENSE  README.md  build.bat  build.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  yt-vd.spec
.github/workflows/: release.yml
src/: __init__.py  __main__.py  cli.py  constants.py  interactive.py  manual.py
src/core/: audio.py  config.py  downloader.py  fragment_safety.py  history.py  metadata.py  parallel.py  playlist.py  progress.py  quality.py  search.py  subtitles.py  utils.py  ydl_options.py
src/gui/: app.py  theme.py
src/gui/frames/: __init__.py  audio.py  download.py  history.py  playlist.py  search.py  settings.py
src/gui/widgets/: __init__.py  progress.py  stats.py  url_input.py
