[project]
name = "yt-vd"
version = "1.0.0"
description = "A powerful YouTube video & playlist downloader with CLI and GUI — parallel downloads, smart quality fallback, audio extraction, and more."
readme = "README.md"
authors = [
    { name = "dhiraj-rajput", email = "rajputdhiraj1010@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["youtube", "downloader", "video", "playlist", "cli", "gui", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "yt-dlp>=2025.1.0",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "questionary>=2.1.0",
    "customtkinter>=5.2.0",
    "pillow>=11.0.0",
    "platformdirs>=4.3.0",
]

[project.scripts]
yt-vd = "cli:app"

[project.gui-scripts]
yt-vd-gui = "gui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "gui", "gui.frames", "gui.widgets"]
py-modules = ["cli", "constants", "interactive", "manual", "__main__", "__init__"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["src/__main__.py", "src/__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
